style.css
/* ... */
.features__element--bubble::before {
    background-image: url('./assets/img/bubble.svg');
    background-size: 32px;
}

.features__element--star::before {
    background-image: url('./assets/img/star.svg');
    background-size: 32px;
    left: 6px;
}

.features__element--star h2 {
    margin-left: 3px;
}

.features__element--star p {
    margin-left: 1px;
}

.portfolio {
    min-height: 800px;
    background: linear-gradient(#2d303a 863px, #323746 683px );
    padding-top: 69px;
    padding-left: 40px;
}

.portfolio > h1 {
    margin-top: 0;
    margin-bottom: 27px;
    font-family: 'Lato', 'Arial' ,sans-serif;
    font-size: 30px;
    line-height: 17px;
    font-weight: 900;
    color: #666d89;
}

.portfolio > p {
    font-family: 'Lato', 'Arial' ,sans-serif;
    font-size: 18px;
    line-height: 30px;
    font-weight: 300;
    color: #767e9e;
    margin-top: 0;
    margin-bottom: 11px;
}

.filter {
    padding-left: 1px;
    margin-bottom: 19px;
    margin-top: 0;
}

.filter li {
    list-style: none;
    display: inline-block;
    width: auto;
}

.filter__btn:focus {
    outline: none;
    border-color: white;
}

.filter__btn {
    display: block;
    background-color: transparent;
    height: 22px;
    border: 1.0px solid #767e9e;
    border-radius: 5px;
    color: #767e9e;
    font-family: 'Lato', 'Arial', sans-serif;
    font-size: 12px;
    font-weight: 400;
    letter-spacing: -0.01em;
    padding-bottom: 2px;
    padding-left: 7px;
    margin-right: 6px;
}

.filter__btn:hover {
    color: white;
    border-color: #c5c5c5;
    cursor: pointer;
}

.filter__btn--checked:hover {
    cursor: default;
}

.filter__btn--checked {
    color: white;
    border: 1.0px solid #c5c5c5;
}

.album {
    height: 621px;
    overflow: hidden;
}

.album__image {
    margin-right: 16px;
    margin-bottom: 16px;
    width: 220px;
    height: 187px;
}

.about-us {
    padding-top: 44px;
    padding-left: 40px;
    height: 690px;
    font-family: 'Lato', 'Arial', sans-serif;
    background: linear-gradient(#f2f2f2 728px, #fff 728px);
}

.about-us__header {
    font-size: 30px;
    line-height: 17px;
    font-weight: 900;
    color: #666d89;
    margin-bottom: 27px;
}

.about-us__text {
    font-size: 18px;
    line-height: 30px;
    font-weight: 300;
    color: #767e9e;
    width: 940px;
    text-align: justify;
    margin-bottom: 45px;
}

.about-us__author {
    display: inline-block;
    width: 300px;
    margin-right: 16px;
}

.about-us__author:nth-child(2) {
    margin-right: 18px;
}

.about-us__name {
    font-size: 18px;
    line-height: 18px;
    font-weight: 900;
    color: #666d89;
    margin-top: 14px;
    margin-bottom: 0;
    letter-spacing: -0.01em;
    white-space: nowrap;

}

.about-us__description {
    font-size: 12px;
    line-height: 21px;
    font-weight: 400;
    color: #767e9e;
    margin-top: 10px;
    text-align: justify;
    letter-spacing: -0.005em;
    margin-bottom: 0;
}

.socials {
    padding-left: 0;
    margin-top: 9px;
}

.socials li {
    list-style: none;
    display: inline-block;
}

.socials__link {
    display: block;
    font-size: 0;
    width: 31px;
    height: 30px;
    border: 1px solid #666d89;
    border-radius: 50%;
    margin-right: 4px;
}

.socials__link:hover {
    position: relative;
    bottom: 3px;
    right: 2px;
    margin-right: 0px;
    width: 35px;
    height: 35px;
}

.socials__link--fb {
    background-image: url('./assets/img/fb.svg');
    background-position: center;
    background-size: 8px;
    background-repeat: no-repeat;
}

.socials__link--gp {
    background-image: url('./assets/img/gp.svg');
    background-position: center;
    background-size: 14px;
    background-repeat: no-repeat;
}

.socials__link--tw {
    background-image: url('./assets/img/tw.svg');
    background-position: center;
    background-size: 14px;
    background-repeat: no-repeat;
}

.socials__link--in {
    background-image: url('./assets/img/in.svg');
    background-position: center;
    background-size: 14px;
    background-repeat: no-repeat;
}

.section-form {
    min-height: 610px;
    padding-top: 44px;
    padding-left: 40px;
    background: linear-gradient(#f06c64 647px, #ea676b 647px);
    font-family: 'Lato', 'Arial' ,sans-serif;
}

.section-form__header {
    font-size: 30px;
    line-height: 17px;
    font-weight: 900;
    color: #f0d8d9;
    letter-spacing: -0.005em;
    margin-bottom: 27px;
}

.section-form__text {
    font-size: 18px;
    line-height: 30px;
    font-weight: 300;
    color: #f0d8d9;
    width:940px;
    text-align: justify;
}

.form__wrapper {
    display: flex;
    flex-direction: row;
}

.form {
    width: 619px;
    margin-top: 10px;
    position: relative;
}

.form input::placeholder,
.form textarea::placeholder {
    color: #f48c8f;
    font-size: 12px;
    font-weight: 400;
}

.form textarea,
.form input {
    position: relative;
    font-family: 'Lato', 'Arial' ,sans-serif;
    padding-left: 15px;
    width: 100%;
    border: 0 solid white;
    background-color: #d6564f;
    border-radius: 5px;
    color: white;
}

.form textarea {
    width: 602px;
    padding-top: 10px;
    height: 190px;
    resize: none;
}

.form input {
    height: 36px;
    width: 604px;
}

.form .form__submit {
    position: absolute;
    left: -9999px;
}



.form__text-area:focus ~ .form__submit {
    width: 100px;
    padding-left: 0;
    padding-right: 0;
    left: 0;
    bottom: -50px;
}

.form__submit:hover,
.form__submit:focus {
    left: 0;
    width: 100px;
    bottom: -50px;
    padding-left: 0;
    padding-right: 0;
    cursor: pointer;
}

.information {
    width: 301px;
    margin-left: 21px;
    margin-top: 12px;
}

.information__header {
    font-size: 18px;
    line-height: 17px;
    font-weight: 900;
    color: #f0d8d9;
    letter-spacing: -0.005em;
    margin-bottom: 10px;
}
/* ... */

